--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,16 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/firebase": "^3.2.1",
+    "@types/jsonwebtoken": "^8.3.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase": "^7.6.1",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
