--- a/functions/package.json
+++ b/functions/package.json
@@ -15,15 +15,19 @@
   "main": "lib/index.js",
   "dependencies": {
     "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/firebase": "^3.2.1",
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/web-push": "^3.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.6.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "web-push": "^3.4.3"
   },
   "devDependencies": {
     "tslint": "^5.12.0",
