--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "@types/cors": "^2.8.6",
+    "@types/nodemailer": "^6.4.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/firebase": "^3.2.1",
@@ -26,13 +27,14 @@
     "firebase": "^7.6.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
+    "nodemailer": "^6.4.6",
     "jsonwebtoken": "^8.5.1",
     "web-push": "^3.4.3"
   },
   "devDependencies": {
+    "firebase-functions-test": "^0.1.6",
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2",
-    "firebase-functions-test": "^0.1.6"
+    "typescript": "^3.2.2"
   },
   "private": true
 }
